# browsers

./: .gitignore  pyproject.toml  requirements.txt
model/: agent_streamlit.py
